fixed firebase push

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     </script>
 
     <script src="js/firebase-login.js"></script>
+    <script src="js/firebase-push.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
@@ -78,7 +79,7 @@
       <form>
         <div class="form-group">
           <label for="username-input">Username</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="email" class="form-control" id="username-input" aria-describedby="emailHelp" placeholder="Enter email">
           <small id="username-input" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group">
