--- a/public/index.html
+++ b/public/index.html
@@ -78,19 +78,15 @@
     <section name="signup-test" class="container">
       <form>
         <div class="form-group">
-          <label for="username-input">Username</label>
-          <input type="email" class="form-control" id="username-input" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="username-input" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <label for="text-input">Event name</label>
+          <input type="email" class="form-control" id="text-input" aria-describedby="emailHelp" placeholder="Event name">
+          <small id="text-label" class="form-text text-muted">What is your event called?</small>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="password-input" placeholder="Password">
+          <label for="details-input">Event details</label>
+          <input type="text" class="form-control" id="details-input" placeholder="Details">
         </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <input id="clickMe" type="button" value="clickme" onclick="writeTest();" />
+        <input id="clickMe" type="button" value="clickme" onclick="writeDataTest();" />
       </form>
     </section>
   </body>
