--- a/public/index.html
+++ b/public/index.html
@@ -89,5 +89,9 @@
         <input id="clickMe" type="button" value="clickme" onclick="writeDataTest();" />
       </form>
     </section>
+
+    <section name="events" class="container">
+      
+    </section>
   </body>
 </html>
