--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,11 @@
       firebase.initializeApp(config);
     </script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
     <script src="js/firebase-login.js"></script>
     <script src="js/firebase-push.js"></script>
+    <script src="js/event-populate.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
@@ -90,8 +93,14 @@
       </form>
     </section>
 
-    <section name="events" class="container">
-      
+    <section name="events" class="container event-container">
     </section>
+    <script>
+      var events = [];
+      events = outputEvents();
+      eventsLength = events.length;
+      console.log(eventsLength);
+      console.log("reee");
+    </script>
   </body>
 </html>
