--- a/public/index.html
+++ b/public/index.html
@@ -96,11 +96,13 @@
     <section name="events" class="container event-container">
     </section>
     <script>
-      var events = outputEvents();
-      eventsLength = events.length;
-      console.log(events);
-      console.log(eventsLength);
-      console.log("reee");
+      outputEvents((data) => {
+        $(data).each(function(i, e) {
+          $(".event-container").append(
+            '<div class="event">'+data[i][0] + ": " + data[i][1] + '</div>'
+          );
+        });
+      });
     </script>
   </body>
 </html>
