--- a/public/index.html
+++ b/public/index.html
@@ -44,37 +44,25 @@
   </head>
   <body>
     <div class="container-fluid" style="padding:0;">
-          <div class="header">
-            <h1>LEARNWITH.ME</h1>
-            <h2>Connecting a community of likeminded learners.</h2>
-          </div>
-        </div>
-        <div class="container" style="padding-left: 73px; margin: 0;">
-          <div class="upcoming" style="padding-bottom: 100px;">
-            <h3>Browse upcoming events</h3>
-
-
-        <div class="card" style="width: 20rem;">
-        <div class="card-img-top"></div>
-        <div class="card-block" style="padding-bottom: 25px;">
-          <h4>Intro to Machine Learning</h4>
-          <p>Computer vision is a new and active field of research, allowing machines to see the world as we know it.</p>
-          <i class="far fa-calendar-alt icon"></i><span class="info">Saturday March 3, 2018 from 6:00 - 9:00 pm</span>
-          <br>
-          <i class="fas fa-map-marker icon"></i><span class="info">Natural Science Centre Room 1</span>
-        </div>
-
+      <div class="header">
+        <h1>LEARNWITH.ME</h1>
+        <h2>Connecting a community of likeminded learners.</h2>
       </div>
     </div>
+    <div class="container" style="padding-left: 73px; margin: 0;">
+      <div class="upcoming event-container" style="padding-bottom: 100px;">
+        <h3>Browse upcoming events</h3>
+        <script>
+          outputEvents((data) => {
+            $(data).each(function(i, e) {
+              var image_url = data[i][1];
+              $(".event-container").append(
+                '<div class="card" style="width: 20rem;"><div class="card-img-top" style=background-image:url("' + image_url + '")></div><div class="card-block" style="padding-bottom: 25px;"><h4>'+data[i][3]+'</h4><p>' + data[i][0] + '</p><i class="far fa-calendar-alt icon"></i><span class="info">' + data[i][4] + '</span><br><i class="fas fa-map-marker icon"></i><span class="info">' + data[i][2] + '</span></div>'
+              );
+            });
+          });
+        </script>
+      </div>
     </div>
-    <script>
-      outputEvents((data) => {
-        $(data).each(function(i, e) {
-          $(".event-container").append(
-            '<div class="event">'+data[i][0] + ": " + data[i][1] + '</div>'
-          );
-        });
-      });
-    </script>
   </body>
 </html>
