--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,8 @@
           <div class="upcoming" style="padding-bottom: 100px;">
             <h3>Browse upcoming events</h3>
 
-
+<div class="row">
+  <div class="col">
         <div class="card" style="width: 20rem;">
         <div class="card-img-top"></div>
         <div class="card-block" style="padding-bottom: 25px;">
@@ -65,6 +66,18 @@
         </div>
 
       </div>
+    </div>
+    <div class="col">
+
+      <div class="card new-card">
+        <img src="plus-circle.png">
+      <div class="card-block" style="padding-bottom: 25px;">
+        <h4 class="create">Create your own event</h4>
+      </div>
+
+    </div>
+  </div>
+</div>
     </div>
     </div>
     <script>
