--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
 <body>
   <div class="container-fluid" style="padding:0;">
     <div class="header">
+      <div class="buttons">
+        <button type="button" class="btn login-button" onclick="signin();"><strong>Login</strong></button>
+      </div>
       <h1>LEARNWITH.ME</h1>
       <h2>Connecting a community of likeminded learners.</h2>
     </div>
