added signout functionality

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,8 @@
   <div class="container-fluid" style="padding:0;">
     <div class="header">
       <div class="buttons">
-        <button type="button" class="btn login-button" onclick="signin();"><strong>Login</strong></button>
+        <button type="button" class="btn login-button" onclick="signin();" id="login"><strong>Login</strong></button>
+        <button type="button" class="btn login-button hide" id="signout" onclick="signOut();"><strong>Sign Out</strong></button>
       </div>
       <h1>LEARNWITH.ME</h1>
       <h2>Connecting a community of likeminded learners.</h2>
