--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
   </div>
   <div class="row">
     <div class="upcoming">
-    <h3>Browse upcoming events</h3>
+    <h3 class="mobile-center">Browse upcoming events</h3>
       <div class="flexbox">
         <script>
           outputEvents((data) => {
